To be honest, I do not quite remember everything I changed here today. But it is all good, I tell ya.

--- a/views/produtos/lista.ejs
+++ b/views/produtos/lista.ejs
@@ -7,14 +7,12 @@
    <body>
       <table>
          <tr>
-            <td>
-
-            </td>
+            <td>id</td>
+            <td>nome</td>
          </tr>
          <tr>
-            <td>
-
-            </td>
+            <td>1</td>
+            <td>livro de nodejs</td>
          </tr>
       </table>
    </body>
