--- a/views/produtos/lista.ejs
+++ b/views/produtos/lista.ejs
@@ -5,7 +5,7 @@
       <title>Lista de produtos</title>
    </head>
    <body>
-      <table>
+      <table style="border:1px solid #000">
          <tr>
             <td>id</td>
             <td>nome</td>
